--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,30 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-} */
-
 .bgPrimary {
   background-color: #f31260;
 }
@@ -34,10 +10,18 @@ body {
   background-color: #fff;
 }
 
+.bgTertiary {
+  background-color: #0095f6;
+}
+
 .textPrimary {
-  color: #fff;
+  color: #f31260;
 }
 
 .textSecondary {
-  color: #f31260;
+  color: #fff;
+}
+
+.textTertiary {
+  color: #0095f6;
 }
